syntax = "proto3";

import "../session/call-types.proto";
import "calendar-recurrence-rules.proto";
import "days-of-week.proto";
import "time-frames.proto";


/** Calendar invite. */
message CalendarInvite {
	/** Preferred days for counteroffers. */
	map<uint32, bool> alternateDays = 1;

	/** Preferred time frames days for counteroffers. */
	map<uint32, bool> alternateTimeFrames = 2;

	/** Burner-specific UID. */
	string burnerUID = 11;

	/** @see CallTypes */
	required CallTypes callType = 3;

	/** Event description. */
	required string description = 4;

	/** End timestamp. */
	required double endTime = 5;

	/** @see CalendarRecurrenceRules */
	CalendarRecurrenceRules recurrence = 10;

	/** Start timestamp. */
	required double startTime = 6;

	/** Event title/subject. */
	required string title = 7;

	/** Event UID. */
	string uid = 9;

	/** Meeting URL. */
	string url = 8;
}
