syntax = "proto3";


/** Call types. */
enum CallTypes {
	None = 0;
	Audio = 1;
	Video = 2;
}
